--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,11 @@
 @import 'tailwindcss';
+@font-face {
+    font-family: 'KakaoBigSans-ExtraBold';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2503@1.0/KakaoBigSans-ExtraBold.woff2') format('woff2');
+    font-weight: 800;
+    font-style: normal;
+}
+
+*{
+    font-family: 'KakaoBigSans-ExtraBold';
+}
