수의사상담 추가

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,16 @@ button:not(:disabled) {
 .animate-vertical-slide {
   animation: vertical-slide 8s linear infinite;
 }
+
+.truncate {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
