--- a/app/globals.css
+++ b/app/globals.css
@@ -19,11 +19,13 @@ button:not(:disabled) {
   100% { transform: translateY(-50%); }
 }
 
-@media (max-width: 1550px) {
-  .hide-below-1550 {
+/*! purgecss start ignore */
+@media (max-width: 1500px) {
+  .hide-below-1500 {
     display: none !important;
   }
 }
+/*! purgecss end ignore */
 
 .animate-vertical-slide {
   animation: vertical-slide 8s linear infinite;
